--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -8,6 +8,7 @@
     display: inline-block;
     border-radius: 10rem;
     transition: all 0.2s;
+    margin-right: 1rem;
 
     background-color: $color-primary-dark;
     color: $color-primary-light;
