--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -32,6 +32,11 @@ a {
   color: inherit;
 }
 
+.back_button {
+  left: 10rem;
+  top: 5rem;
+}
+
 //   &:hover {
 //     transform: translateY(20rem);
 //     box-shadow: 0 1rem 2rem rgba($color-black, 0.9);
