--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -106,8 +106,8 @@ a {
   color: inherit; }
 
 .back__button {
-  left: 10rem;
-  top: 5rem;
+  left: 3%;
+  top: 3rem;
   position: absolute; }
 
 .project {
