--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -36,6 +36,18 @@ a {
   left: 3%;
   top: 3rem;
   position: absolute;
+  @media screen and (max-width: $bp-small) {
+    left: 0;
+    top: 5em;
+    padding: 0rem;
+    margin: 0;
+  }
+  @media screen and (max-width: $bp-med) {
+    left: 0;
+    top: 5em;
+    padding: 0rem;
+    margin: 0;
+  }
 }
 
 //   &:hover {
