--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -13,7 +13,6 @@
     background-color: $color-primary-dark;
     color: $color-primary-light;
 
-    //Change for the <button> element
     border: none;
     cursor: pointer;
   }
@@ -37,10 +36,10 @@ a {
   top: 3rem;
   position: absolute;
 
-  @media screen and (max-width: $bp-mws) {
-    left: 0;
-    top: 5em;
-    padding: 0rem;
-    margin: 0;
-  }
+  // @media screen and (max-width: $bp-mws) {
+  //   left: 0;
+  //   top: 5em;
+  //   padding: 0rem;
+  //   margin: 0;
+  // }
 }
