--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -109,6 +109,12 @@ a {
   left: 3%;
   top: 3rem;
   position: absolute; }
+  @media screen and (max-width: 56em) {
+    .back__button {
+      left: 0;
+      top: 5em;
+      padding: 0rem;
+      margin: 0; } }
 
 .project {
   height: 100%;
