body background color lighten

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -42,7 +42,7 @@ html {
       width: 100vw; } }
 
 body {
-  background: #ccc; }
+  background: #faf9f9; }
   @media screen and (max-width: 38.5em) {
     body {
       width: 100vw;
