--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -49,6 +49,7 @@
       grid-row: 2/3;
       grid-column: 2/3;
       padding: 2rem;
+      padding-left: 3rem;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       @media screen and (max-width: $bp-smallest) {
@@ -132,4 +133,19 @@
       font-size: 1rem;
     }
   }
+}
+.name__input {
+  padding-left: 0.5rem;
+  margin-left: 1rem;
+  font-family: inherit;
+}
+.email__input {
+  padding-left: 0.5rem;
+  margin-left: 1rem;
+  font-family: inherit;
+}
+.message__input {
+  padding-left: 0.5rem;
+  margin-left: 1rem;
+  font-family: inherit;
 }
